# oz-insta-back

./: db.sqlite3  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_initial.py  0003_remove_feed_feedauthor_feed_user.py  0004_feed_reviewsnum.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_reviewauthor.py  0004_remove_review_reviewauthor_review_user_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
